<resources>
    <string name="app_name">NFCopy</string>
    <string name="nav_header_description">Copy your NFC card</string>
    <string name="action_delete_all">Delete all</string>

    <string name="menu_cards">Cards</string>
    <string name="menu_new_card">New card</string>
    <string name="menu_settings">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="ic_wifi_description">Nfc signal</string>
    <string name="action_card_added">New card added</string>
    <string name="iv_photo">Photo</string>
    <string name="card_uuid">UUID</string>
    <string name="card_name">Name</string>
    <string name="add">Add</string>
    <string name="action_select_picture">Select Picture</string>
    <string name="card_class">Class</string>
    <string name="action_deleted_card">1 card removed</string>
    <string name="action_undo_deleted">Undo</string>
    <string name="card_gallery">Gallery</string>
    <string name="card_camera">Camera</string>
    <string name="details">Details</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="read_failed">Read failed. Try to scan again.</string>
    <string name="error">Error</string>
    <string name="scanned_card">Scanned card</string>
    <string name="card_can_be_copied">Card can be copied</string>
    <string name="card_cannot_be_copied">Card can\'t be copied</string>
</resources>
