<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_cards">

    <fragment
        android:id="@+id/nav_cards"
        android:name="com.mateuszstarczyk.nfcopy.ui.cards.CardsFragment"
        android:label="@string/menu_cards"
        tools:layout="@layout/fragment_cards" />

    <fragment
        android:id="@+id/nav_new_card"
        android:name="com.mateuszstarczyk.nfcopy.ui.new_card.NewCardFragment"
        android:label="@string/menu_new_card"
        tools:layout="@layout/fragment_new_card" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.mateuszstarczyk.nfcopy.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.mateuszstarczyk.nfcopy.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.mateuszstarczyk.nfcopy.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>